# altertable-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release-please.yml
src/altertable/: __init__.py  client.py
tests/: test_altertable.py  test_basic.py
