[tool.poetry]
name = "altertable"
version = "0.1.0"
description = "Official Python SDK for Altertable Product Analytics"
authors = ["Altertable <hello@altertable.ai>"]
readme = "README.md"
packages = [{include = "altertable", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
types-requests = "^2.32.4.20260107"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
